// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Debounce 3. immediately updates props, but delays update of debouncedprops 1`] = `
Object {
  "debounceTimeMs": 1000,
  "debouncedProps": Object {
    "debounceRender": [Function],
    "debounceTimeMs": 1000,
    "foo": "initialFoo",
  },
  "foo": "updatedFoo",
  "isDebouncing": false,
}
`;

exports[`Debounce 3. immediately updates props, but delays update of debouncedprops 2`] = `
Object {
  "debounceTimeMs": 1000,
  "debouncedProps": Object {
    "debounceRender": [Function],
    "debounceTimeMs": 1000,
    "foo": "initialFoo",
  },
  "foo": "updatedFoo",
  "isDebouncing": false,
}
`;

exports[`Debounce 3. immediately updates props, but delays update of debouncedprops 3`] = `
Object {
  "debounceTimeMs": 1000,
  "debouncedProps": Object {
    "debounceRender": [Function],
    "debounceTimeMs": 1000,
    "foo": "updatedFoo",
  },
  "foo": "updatedFoo",
  "isDebouncing": false,
}
`;

exports[`Debounce 4. handles different debounce delays 1`] = `
Object {
  "debounceTimeMs": 2500,
  "debouncedProps": Object {
    "debounceRender": [Function],
    "debounceTimeMs": 2500,
    "foo": "initialFoo",
  },
  "foo": "updatedFoo",
  "isDebouncing": false,
}
`;

exports[`Debounce 4. handles different debounce delays 2`] = `
Object {
  "debounceTimeMs": 2500,
  "debouncedProps": Object {
    "debounceRender": [Function],
    "debounceTimeMs": 2500,
    "foo": "initialFoo",
  },
  "foo": "updatedFoo",
  "isDebouncing": false,
}
`;

exports[`Debounce 4. handles different debounce delays 3`] = `
Object {
  "debounceTimeMs": 2500,
  "debouncedProps": Object {
    "debounceRender": [Function],
    "debounceTimeMs": 2500,
    "foo": "updatedFoo",
  },
  "foo": "updatedFoo",
  "isDebouncing": false,
}
`;

exports[`Debounce 5. handles zero debounce delay 1`] = `
Object {
  "debounceTimeMs": 0,
  "debouncedProps": Object {
    "debounceRender": [Function],
    "debounceTimeMs": 0,
    "foo": "updatedFoo",
  },
  "foo": "updatedFoo",
  "isDebouncing": false,
}
`;
